@startuml

package Practica_1 {

    class Cadena {
        - nombre : String
        - listaProgramas : ArrayList<Programa>

        + Cadena(nombre : String)
    }

    class Programa {
        - nombre : String
        - cadena : Cadena
        - temporadas : int
        - listaEmpleados : ArrayList<Empleado>
        - listaInvitados : ArrayList<Invitado>
        - director : Empleado
        --
        + Programa(nombre : String, cadena : Cadena, temporadas : int)
        + vecesInvitados(nombre : String)
        + invitadosTemporarda(temporadas : int)
        + anyadirEmpleado(empleado : Empleado)
        + anyadirInvitado(invitado : Invitado)
        + eliminarEmpleado(empleado : Empleado)
        + eliminarInvitado(invitado : Invitado)
        - nombreDirector() : String
    }

    class Empleado {
        - CADENA_ID : String = "EP "
        - contadorEmpleados : int
        - id : String
        - nombre : String
        - cargo : String
        --
        + Empleado(nombre : String, cargo : String)
        + controlCargo(cargo : String) : String
        - generadorID() : String
    }

    class Invitado {
        - nombre : String
        - profesion : String
        - fecha : LocalDate
        - temporada : int
        --
        + Invitado(nombre : String, profesion : String, fecha : LocalDate, temporada : int)
        + anyo() : int
        + mes() : int
        + dia() : int
    }

    Cadena "1" o-- "*" Programa : contiene >
    Programa "1" --> "1" Cadena : pertenece >
    Programa "1" o-- "*" Empleado : empleados >
    Programa "1" o-- "*" Invitado : invitados >
    Programa "1" --> "1" Empleado : director >
}

@enduml